--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,6 @@
             "role":  "Lead Architect / Developer"
         }
     ],
-    "autoload": {
-        "classmap": ["src/"]
-    },
     "require": {
         "ext-pdo_sqlite": "*",
         "hiraeth/cache": "^3.0"
@@ -21,6 +18,12 @@
     "require-dev": {
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^10.0"
+    },
+    "autoload": {
+        "classmap": ["src"]
+    },
+    "autoload-dev": {
+        "classmap": ["test/src"]
     },
     "type": "opus-package",
     "extra": {
